...

  return (
    <View key="FeaturedPosts" mb={6}>
      {!isLoading && (
        <View pt={2} px={4} width="full">
          <Text color={colors.black[800]} fontSize="2xl" fontWeight={700}>
            Featured Posts
          </Text>
        </View>
      )}
      {isLoading ? <ContentLoader /> : null}
      {!isLoading && data?.length
        ? data.map((item, index) => {
...
