...
                  returnKeyType="next"
                  size="lg"
                  style={[
                    styles.inputView,
                    {backgroundColor: theme.colors.white[800]},
                  ]}
                  testID="forgot-email"
                  value={value}
                  onChangeText={onChange}
                />
              )}
              rules={{required: true}}
            />
...
          <Button
            disabled={!isValid || loading}
            loading={loading}
            loadingText="Resetting Password"
            mt={10}
            style={styles.buttonStyle}
            testID="reset-password"
            title="RESET PASSWORD"
            onPress={handleSubmit(onSubmit)}
          />
        </View>
        <View
          alignItems="center"
...
