...
      <View alignItems="center" flex={1} justifyContent="space-around">
        <View left={6} position="absolute" top={4}>
          <HeaderLeft onPress={navigation.goBack} />
        </View>
        <View alignItems="center" justifyContent="center" width="100%">
          <Text fontSize={22} fontWeight="900">
            Check Your Email
          </Text>
          <Text fontSize={20} mt={5}>
            We've sent an email to
          </Text>
          <Text
            color={theme.colors.red[900]}
...
